--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
-    "name": "edilsmart-proxy",
+    "name": "edilsmart-app",
     "version": "1.0.0",
-    "description": "Proxy server for EdilSmart to bypass CORS",
-    "main": "server.js",
+    "private": true,
+    "type": "module",
     "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js"
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "proxy": "node server.js"
     },
     "dependencies": {
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "lucide-react": "^0.344.0",
+        "recharts": "^2.12.2",
+        "@google/genai": "^1.34.0",
+        "@google/generative-ai": "^0.24.0",
         "express": "^4.18.2",
         "cors": "^2.8.5",
         "node-fetch": "^2.7.0"
     },
     "devDependencies": {
-        "nodemon": "^3.0.2"
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "typescript": "^5.2.2",
+        "vite": "^5.3.1",
+        "nodemon": "^3.0.2",
+        "autoprefixer": "^10.4.19",
+        "postcss": "^8.4.38",
+        "tailwindcss": "^3.4.4"
     }
 }
