--- a/package.json
+++ b/package.json
@@ -10,25 +10,26 @@
         "proxy": "node server.js"
     },
     "dependencies": {
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "lucide-react": "^0.344.0",
-        "recharts": "^2.12.2",
         "@google/genai": "^1.34.0",
         "@google/generative-ai": "^0.24.0",
-        "express": "^4.18.2",
         "cors": "^2.8.5",
-        "node-fetch": "^2.7.0"
+        "express": "^4.18.2",
+        "lucide-react": "^0.344.0",
+        "node-fetch": "^2.7.0",
+        "pdf-lib": "^1.17.1",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "recharts": "^2.12.2"
     },
     "devDependencies": {
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
-        "typescript": "^5.2.2",
-        "vite": "^5.3.1",
-        "nodemon": "^3.0.2",
         "autoprefixer": "^10.4.19",
+        "nodemon": "^3.0.2",
         "postcss": "^8.4.38",
-        "tailwindcss": "^3.4.4"
+        "tailwindcss": "^3.4.4",
+        "typescript": "^5.2.2",
+        "vite": "^5.3.1"
     }
 }
